提交路由管理，导航栏，标签栏。

--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -1,4 +1,7 @@
-@import './utils.scss';
+// 定义主色调
+$designWidth: 250px;
+$main-color: #22129f;
+$bgColor: #F5F5F9;
 // reset 模块
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
