提交个人中心和首页模块。

--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -1,6 +1,6 @@
 // 定义主色调
-$designWidth: 250px;
-$main-color: #22129f;
+$designWidth: 300px;
+$main-color: #3D11EE;
 $bgColor: #F5F5F9;
 // reset 模块
 html, body, div, span, applet, object, iframe,
